--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -105,6 +105,7 @@
     font-size: 20px;
     cursor: pointer;
     z-index: 1000;
+    align-self: flex-start;
   }
 
   &__nav {
@@ -156,6 +157,23 @@
     &__title {
       font-size: 3.4rem;
     }
+
+    &__nav--research {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    &__filters {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    &__research {
+      align-items: initial;
+      gap: 50px;
+    }
   }
 
   @media (max-width: 435px) {
@@ -167,13 +185,6 @@
       width: 15px;
       height: 15px;
       margin: 30px 0 0 0;
-    }
-
-    &__nav--research {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
     }
 
     .fa-bars {
@@ -194,12 +205,12 @@
     &__user {
       flex-direction: column;
       align-items: center;
-      gap:0;
+      gap: 0;
     }
 
     &__modal {
-    margin: 0px 30px;
-    padding: 20px;
-  }
+      margin: 0px 30px;
+      padding: 20px;
+    }
   }
 }
